--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,5 @@
-* {
-  box-sizing: border-box;
-}
-
-html,
-body,
-#root,
-#root > div,
-div[data-reactroot] {
-  height: 100%;
-  padding: 0;
+body {
   margin: 0;
+  padding: 0;
+  font-family: sans-serif;
 }
